changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.
Correctly pick weapons.
Nicolas Weeger 2010-09-26

Fix bug #2938887: problem with casting unknown spell.
Change the display logic, don't show all spells when no matching spell.
Nicolas Weeger 2010-09-26

Directors should not move doors.
This fixes bug #3059451: force (smover) throws doors off hinges.
Nicolas Weeger 2010-09-21

Ignore 'FLAG_OBJ_ORIGINAL' for merging purposes. This fixes a merging bug with
unique maps.
Nicolas Weeger 2010-09-12

Fix broken DM 'follow' command.
Nicolas Weeger 2010-09-12

Add unit test exposing a weight reduction issue with containers.
Fix said weight reduction bug.
Nicolas Weeger 2010-09-11

Fix fishing rod not being correctly applied with ready_skill.
This fixes the second part of bug #3060474.
Nicolas Weeger 2010-09-08

Fix do_harvest() not checking if player can actually carry what is harvested.
This fixes bug #3060474: fishing puts more fishes into inventory than you can carry.
Nicolas Weeger 2010-09-08

Fix examine_monster() to handle critically hit cases.
Nicolas Weeger 2010-09-08

Unit tests: correctly initialise the config dir (for experience and such).
Nicolas Weeger 2010-09-06

CRE: fix item's chance in treasure display. Show % and chance out of total.
Nicolas Weeger 2010-09-04

CRE: extract various things to 'ResourcesManager'.
This gets back archetypes and treasure sorting, without messing the
treasure list's ordering.
Nicolas Weeger 2010-09-04

Add key_value 'no_mood_change' that when set to 1 on a monster